--- a/public/index.html
+++ b/public/index.html
@@ -6,26 +6,14 @@
     <title>МТС Digital</title>
   </head>
   <body>
-    МТС Digital<br />
-    Трек Web/DA: Сервис визуализации организационной структуры<br />
-    В компании с тысячами сотрудников и множеством департаментов поиск нужного
-    коллеги по должности или роли может затянуться. Как быстро и эффективно
-    найти нужного специалиста?<br />
-    <br />
-    Создайте MVP веб-приложения для визуализации организационной структуры
-    компании, которое поможет пользователям легко ориентироваться и находить
-    сотрудников по косвенным признакам, не зная их точного имени или места в
-    иерархии.<br />
-    <br />
-    Ваша цель – создать интуитивное UX/UI решение, которое позволит наглядно
-    отображать иерархические связи, подчиненность и состав команд.<br />
-    <br />
-    Стек технологий:<br />
-    Python/Go, JS/TypeScript, React<br />
-    <br />
-    Состав команды:<br />
-    Backend Developers<br />
-    Frontend Developer<br />
-    Data Analyst<br />
+    <header>
+        <div class="icon"><img src="./image.png" alt=""><div class="name">LENDING</div></div>
+        <div class="text-field__icon">
+            <input class="text-field__input" type="search" name="search" id="search" placeholder="Введите данные сотрудника">
+            <span class="text-field__aicon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" /></svg>
+            </span>
+          </div>
+    </header>
   </body>
 </html>
