--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>МТС Digital</title>
   </head>
-  <body></body>
+  <body>
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span id="close" class="close">&times;</span>
+            <h2>Информация о сотруднике</h2>
+            <div id="modalBody"></div>
+        </div>
+    </div>
+  </body>
 </html>
