--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>МТС Digital</title>
   </head>
   <body>
+    <div id="root"></div>
+
     <div id="modal" class="modal">
         <div class="modal-content">
             <span id="close" class="close">&times;</span>
